--- a/assets/css/3-modules/_header.scss
+++ b/assets/css/3-modules/_header.scss
@@ -2,7 +2,6 @@
 header {
 	text-align: center;
 	padding: 2em 0;
-	// margin-bottom: 2em;
 	
 	a.tayo {
 		display: block;
@@ -20,5 +19,8 @@ header {
 			@include size(100%);
 		}
 	}
+
+	// debug
+	@extend %size-testr;
 
 }
