--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <section class="fold">
 	
 	<header>
-		<a href="{{ site.baseurl }}">
+		<a href="{{ site.baseurl }}" id="home">
 			{% include svg/avi.html %}
 		</a>
 	</header>
@@ -14,5 +14,6 @@
 	</nav>
 
 	{% include social.html %}
-	<a href="#hero" class="scroll-more"><i class="fa fa-angle-down"></i></a>
+	<!-- scroll more -->
+	<!-- <a href="#hero" class="scroll-more"><i class="fa fa-angle-down"></i></a> -->
 </section>
