--- a/assets/css/1-tools/_tools-index.scss
+++ b/assets/css/1-tools/_tools-index.scss
@@ -4,6 +4,6 @@
 @import "bourbon/bourbon";
 
 // Poole, Syntax & Hyde
-@import "poole";
+// @import "poole";
 // @import "syntax";
-@import "hyde";
+// @import "hyde";
