--- a/assets/css/2-base/_grid.scss
+++ b/assets/css/2-base/_grid.scss
@@ -1,26 +1,29 @@
 %container {
-	max-width: 39.5rem;
+	// max-width: 39.5rem;
+
+	width: 100%;
 	display: block;
-	padding: 0 1rem;
+	padding: 0 1em;
 	margin: 0 auto;
+	@include transition(all .25s linear);
+
+	@include bp(baby) {
+		width: 90%;
+		max-width: 34em; // 510 @ 480-768
+	}
+	@include bp(mama) {
+		// max-width: ; // @ 768-1-24
+	}
+	@include bp(papa) {
+		max-width: 40em; // @ 1024-1200
+	}
+	@include bp(grand) {
+		max-width: 64em; // 960 @ 1200+
+	}
+
 }
 
 .container {
 	@extend %container;
 }
 
-#hero {
-	// @include size(100%);
-	@extend %container;
-	padding: 0;	
-	margin-top: 1em;
-	margin-bottom: 1em;
-
-	position: relative;
-	overflow: hidden;
-
-	text-align: center;
-	p {
-		padding: 0 2em;
-	}
-}
