--- a/assets/css/3-modules/_header.scss
+++ b/assets/css/3-modules/_header.scss
@@ -13,7 +13,6 @@ header {
 	// debug
 	@extend %size-testr;
 
-
 	&.navbar-on {
 		padding-top: 1em;
 		a {
@@ -25,11 +24,14 @@ header {
 		  text-align: right;
 		  left: 0;
 		  padding: 0 1em 0;
+		  	
 		  	svg {
+		  		display: block;
 		  		@include size(2em 100%);
 		  		height: 100%;
 		  		width: 2em;
 		  	}
+
 		}
 	}
 
