--- a/assets/css/1-tools/_tools-index.scss
+++ b/assets/css/1-tools/_tools-index.scss
@@ -2,6 +2,9 @@
 @import "normalize";
 // BOURBON
 @import "bourbon/bourbon";
+// NEAT, this is throwing an error
+// @import "neat/neat";
+
 
 // Poole, Syntax & Hyde
 // @import "poole";
