--- a/assets/css/2-base/_variables.scss
+++ b/assets/css/2-base/_variables.scss
@@ -3,8 +3,9 @@ $dark: #111;
 $dark-light: lighten($dark, 50%);
 
 // new
-$black: #000;
-$grey: #888;
+$white: 		#fff;
+$black: 		#000;
+$grey: 			#888;
 
 
 // flat test colors
