--- a/assets/css/tayo.scss
+++ b/assets/css/tayo.scss
@@ -1,5 +1,19 @@
 ---
 ---
+/*
+*        ___               ..        ____       ____    _______________
+*       |   |             /	 \       \   \     /   /   |               |
+*       |   |            /    \       \   \   /   /    |   \\    //    |
+*  _____|   |_____      /      \     __\   \./   /__   |    \\  //     |
+* |               |    /        \   |               |  |     †∆¥ø      |
+* |_____     _____|   /          \  |_____     _____|  |     ~~~~      |
+*       |   |        /            \       |   |        |    //  \\     |
+*       |   |       /              \      |   |        |   //    \\    |
+*       |___|      /________________\     |___|        |_______________|
+* 	 	 
+*  This site proudly brought to you by the mind of me.	 	 
+* 	 	 
+*/
 
 // Tools
 @import "1-tools/tools-index";
@@ -8,7 +22,7 @@
 // Modules
 @import "3-modules/modules-index";
 // Page
-@import "4-page/page-index";
+// @import "4-page/page-index";
 
 
 
