--- a/assets/css/3-modules/_header.scss
+++ b/assets/css/3-modules/_header.scss
@@ -7,13 +7,15 @@
 header {
 	text-align: center;
 	padding: 2em 0;
+	svg {
+	}
 
 	// on scroll shrink this guy and move him right?	
 
 	// debug
 	@extend %size-testr;
 
-	&.navbar-on {
+	&.active {
 		padding-top: 1em;
 		a {
 			display: block;
@@ -26,6 +28,7 @@ header {
 		  padding: 0 1em 0;
 		  	
 		  	svg {
+		  		@include transition(all .5s ease-in-out);
 		  		display: block;
 		  		@include size(2em 100%);
 		  		height: 100%;
@@ -51,7 +54,7 @@ nav {
 	background-color: #fefefe;
 	overflow: hidden;
 
-	a {
+	> a {
 		display: block;
 		padding: 1em 0.5em;
 
