--- a/assets/css/1-tools/_tools-index.scss
+++ b/assets/css/1-tools/_tools-index.scss
@@ -3,8 +3,7 @@
 // BOURBON
 @import "bourbon/bourbon";
 // NEAT, this is throwing an error
-// @import "neat/neat";
-
+@import "neat/neat";
 
 // Poole, Syntax & Hyde
 // @import "poole";
