--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,13 @@
 
 <body>
 
-{% include header.html %}
+{% include sfp.html %}
 
-<div class="content container">
+<div class="container">
+	{% include header.html %}
   {{ content }}
 </div>
+
 
 {% include footer.html %}
 </body>
