--- a/assets/css/3-modules/_header.scss
+++ b/assets/css/3-modules/_header.scss
@@ -1,73 +1,184 @@
 ////////////////////////////////////////
 // Header & Navbar
 ////////////////////////////////////////
+#navbar {
+	// padding-top: 1em;
+
+	a.nav-toggle {
+		// display: none;
+		top: 3em;
+		@include transform( translateY(-5em) );
+		@include transition(all .5s ease-in-out);
+		position: relative;
+		z-index: 99;
+	}
+	
+	@include transition(all .5s ease-in-out);
+
+	// turned this off for now
+	// @include position(fixed, 0 1em null);
+	// height: 100%;
+	// background-color: $test4;
+	z-index: 1;
+	
+	// flex test
+	// @include display(flex);
+	// @include flex-direction(column);
+
+	header {
+		
+		display: block;
+		padding: 2em 0;
+		text-align: center;
+		
+		@include transition(all .5s ease-in-out);
 
 
-// Header & AVI
-header {
-	text-align: center;
-	padding: 2em 0;
-	svg {
+		// @include flex(2);
+		position: relative;
+		z-index: 3;
+		// debug
+		// @extend %size-testr;
+		// background-color: #fff;
+		
+		a {			
+			
+			svg.avi {
+				display: inline-block;
+				@include transition(all .5s ease-in-out);
+			}
+
+		}
+
 	}
 
-	// on scroll shrink this guy and move him right?	
+	nav {
+		position: relative;
+		text-align: center;
+		padding-bottom: 0;
 
-	// debug
-	@extend %size-testr;
+	
+		// @include flex(2);
+		// debug
+		// background-color: antiquewhite;		
+		z-index: 1;
+		@include transition(all .5s ease-in-out);
+
+		> a {
+			display: block;
+			padding: 1em 0.5em;
+
+			@include bp(baby) { display: inline-block; }
+		}
+	}
+
+	// scroll thing
+	&.shrink-on {
+	
+		// height: 20%;
+		bottom: null;
+		
+		// show this
+		a.nav-toggle {
+			@include transform( translateY(0) );
+		}
+
+		header {
+			// padding-top: 0;
+			// padding-bottom: 1em;
+			// @include flex(1);
+			padding: 1em 0;
+			
+			a {
+				svg {
+					height: 5em;
+					@include transition(all .5s ease-in-out);
+
+				}
+			}
+		}
+
+		nav {
+			// @include flex(6);
+			// @include transform( translateY(-100%) );
+			margin-top: -15em;
+
+		}
+	}
 
 	&.active {
-		padding-top: 1em;
-		a {
-			display: block;
-		  position: absolute;
-		  right: 0;
-		  height: 4em;
-		  overflow: hidden;
-		  text-align: right;
-		  left: 0;
-		  padding: 0 1em 0;
-		  	
-		  	svg {
-		  		@include transition(all .5s ease-in-out);
-		  		display: block;
-		  		@include size(2em 100%);
-		  		height: 100%;
-		  		width: 2em;
-		  	}
+		background-color: yellow;
+		bottom: 0;
+
+		nav {
+			// @include transform( translateY(0%) );
+			margin-top: 0em;
+			padding-bottom: 100%;
 
 		}
 	}
-
 }
 
-// Avatar
-svg.avi {
-	display: block;
-	margin: 0 auto;
-}
+// Header & AVI
+// header {
+
+// 	&.active {
+// 		padding-top: 1em;
+		
+// 		a {
+// 			display: block;
+// 		  position: absolute;
+// 		  left: 0;
+// 		  right: 0;
+		  
+// 		  height: 4em;
+// 		  overflow: hidden;
+// 		  text-align: right;
+		  
+// 		  padding: 0 1em 0;
+		  	
+// 		  	svg {
+// 		  		@include transition(all .5s ease-in-out);
+// 		  		display: block;
+// 		  		// @include size(2em 100%);
+// 		  		height: 100%;
+// 		  		height: 16em;
+// 		  		// width: 2em;
+// 		  		@include transform( scale(50%) );
+// 		  	}
+// 		}
+// 	}
+// }
+
 
 // Navigation
-nav {
-	
-	@extend %container;
-	text-align: center;
-	background-color: #fefefe;
-	overflow: hidden;
+// nav {	
+	// text-align: center;
+	// background-color: #fefefe;
+	// overflow: hidden;
 
-	> a {
-		display: block;
-		padding: 1em 0.5em;
-
-		@include bp(baby) {
-			display: inline-block;
-		}
-		
-	}
+	// &.slide-out {
+	// 	position: absolute;
+	// 	@include transform( translateY(-90%) );
 	// }
-}
+	// > a {
+	// 	display: block;
+	// 	padding: 1em 0.5em;
+	// 	@include bp(baby) {
+	// 		display: inline-block;
+	// 	}
+	// }	
+// }
+
+
+
+
+
 
 // Scroll more
 .scroll-more {
 	display: block;
 	text-align: center;
 }
+
+
