Also broke out SFP stylesheets into modules

--- a/assets/css/3-modules/_sfp-base.scss
+++ b/assets/css/3-modules/_sfp-base.scss
@@ -55,7 +55,7 @@ $blue1-rgba: 93, 188, 230, 0.8;
 
 	// kill this?
 	.container {
-		// padding: 0 2em;
+		background-color: white;
 	}
 	
 	// TYPOGRAPHY
