--- a/_includes/svg/icon2.html
+++ b/_includes/svg/icon2.html
@@ -1,5 +1,5 @@
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+	 width="300px" height="" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
 <path id="pencil" d="M219.596,0H209.4L164,133.017V300h23.757h53.482H265V133.017L219.596,0z M190.729,174.404l-20.559-41.342
 	L203.524,35h21.947l33.354,98.062l-20.559,41.227l-23.769-47.48L190.729,174.404z M170,294V146.096l18,35.655V294H170z M194,294
 	V181.751l20.5-41.599l20.5,41.599V294H194z M241,294V181.751l18-35.655V294H241z"/>
