--- a/_includes/svg/icon3.html
+++ b/_includes/svg/icon3.html
@@ -1,5 +1,5 @@
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="300px" height="300px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+	 width="300px" height="" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
 <path id="pocket" d="M198.059,171h-96.117C95.152,171,88,177.688,88,184.662v12.396v47.059c0,1.626,1.551,2.883,3.176,2.883h117.647
 	c1.626,0,3.177-1.257,3.177-2.883v-47.059v-12.396C212,177.688,204.85,171,198.059,171z M206,241H94v-41h6v8.823
 	c0,4.866,4.135,8.823,9,8.823s9-3.957,9-8.823V200h88V241z M106,208.823V200h6v8.823c0,1.62-1.377,2.94-3,2.94
