--- a/assets/css/3-modules/_sfp-article.scss
+++ b/assets/css/3-modules/_sfp-article.scss
@@ -3,7 +3,7 @@
 
 section.content {
 	padding: 3em 0;
-	margin-bottom: 2em;
+	// margin-bottom: 2em;
 	// min-height: 100%;
 	// min-height: 100vh;
 	clear: both;
@@ -15,29 +15,38 @@ section.content {
 		position: relative;
 		display: block;
 		width: 100%;
-		padding: 2em;
+		padding: 0 2em;
 		// @extend %size-testr;
 
 		svg {
 			fill: $blue1;
 			max-width: 100%;
+			height: 100%;
 		}
 
 	}
-	
+
 	.content-text {
 		position: relative;
 		display: block;
 		width: 100%;
 	}
 	
+
 	@include bp(mama) {
 		min-height: 50%;
 		min-height: 50vh;
+		margin-bottom: 2em;
 
 		.content-img {
 			float: left;
 			width: 40%;
+			// add back the padding
+			padding: 2em;
+			svg {
+				height: 300px;
+				height: 20em;
+			}
 		}
 
 		.content-text {
