--- a/assets/css/3-modules/_sfp-base.scss
+++ b/assets/css/3-modules/_sfp-base.scss
@@ -27,6 +27,10 @@ $blue1-rgba: 93, 188, 230, 0.8;
 	@include bp(baby) {
 		@include position(absolute, 0);
 	}
+
+	@include bp(mama) {
+
+	}
 	// overflow-y: scroll;
 	// debug
 	background-color: pink;
@@ -50,7 +54,8 @@ $blue1-rgba: 93, 188, 230, 0.8;
   	background-position: center bottom;
   	background-repeat: no-repeat;
   	background-size: cover; 
-  	background-attachment: fixed; 	
+  	// fix for iOS scrolling issue
+  	@include bp(papa) { background-attachment: fixed; }
 	}
 
 	// kill this?
@@ -95,7 +100,7 @@ $blue1-rgba: 93, 188, 230, 0.8;
 	  text-transform: uppercase;
 	  letter-spacing: 2px;
 	  font-size: 1em;
-	  margin: 2em auto 1em;
+	  margin: 1.5em auto 1em;
 	  color: white;
 	  &.sfp-title { color: $blue2; }
 	  color: $blue1;
