--- a/assets/css/3-modules/_sfp-bolt.scss
+++ b/assets/css/3-modules/_sfp-bolt.scss
@@ -2,13 +2,13 @@
 // Lighting Bolt Logo
 
 
-$logo-color: white;
-$logo-size: 10em;
-$logo-vert: 10%;
-$logo-hor: 45%;
-$border-transparent: solid transparent;
-$border-ht-ration: 5.5;
-$border-wd-ration: 2.3;
+$logo-color:          white;
+$logo-size:           10em;
+$logo-vert:           10%;
+$logo-hor:            45%;
+$border-transparent:  solid transparent;
+$border-ht-ration:    5.5;
+$border-wd-ration:    2.3;
 
 .logo {
   position: relative;
@@ -19,10 +19,9 @@ $border-wd-ration: 2.3;
   
   @include size($logo-size);
   border: ($logo-size/20) solid $logo-color;
-
   @include transition(all .25s ease-in-out);
     
-  &:hover, &:focus { 
+  &:hover, &:focus, &:active { 
   	@include transform(rotate(45deg)); 
   	background-color: $blue2;
   }
@@ -34,20 +33,18 @@ $border-wd-ration: 2.3;
   }
 
   &:before {
-    right: $logo-hor;
-    top: $logo-vert;
-    border: 			0em $border-transparent;    
-    border-right: $logo-size/$border-ht-ration solid $logo-color;
-    border-top: 	$logo-size/$border-wd-ration $border-transparent;
+    right:          $logo-hor;
+    top:            $logo-vert;
+    border:         0em $border-transparent;    
+    border-right:   $logo-size/$border-ht-ration solid $logo-color;
+    border-top:     $logo-size/$border-wd-ration $border-transparent;
   }
 
   &:after {
-
-    left: 45%;
-    bottom: 10%;    
+    left:           45%;
+    bottom:         10%;    
     border: 				0em $border-transparent;	
     border-left: 		$logo-size/$border-ht-ration solid $logo-color;
     border-bottom: 	$logo-size/$border-wd-ration $border-transparent;
   }
-  
 }
