--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
-
-<div class="size-testr"></div>
+<!-- <div class="size-testr"></div> -->
 <section class="fold" id="navbar">
 	
 	<a href="#" class="nav-toggle">
