--- a/_layouts/default-sfp.html
+++ b/_layouts/default-sfp.html
@@ -1,14 +1,15 @@
 {% include head.html %}
-
 <body>
 
-{% include sfp.html %}
-
-<div class="container">
-	{% include header.html %}
-  {{ content }}
+<div class="sfp-wrapper slide">
+	{{ content }}
 </div>
 
-{% include footer.html %}
+<!-- this is the tayo homepage -->
+<div class="container">
+	{% include header.html %}
+</div>
+
+{% include sfp-footer.html %}
 </body>
 </html>
