--- a/assets/css/3-modules/_sfp-article.scss
+++ b/assets/css/3-modules/_sfp-article.scss
@@ -1,7 +1,24 @@
 //////////////////////////////////////////
 // Article 
 
-section.content {
+.content {
+	padding: 3em 0;	
+	clear: both;
+	// debug
+	// &:nth-child(even) { background-color: #f9f9f9; }	
+
+	@include bp(mama) {
+		min-height: 50%;
+		min-height: 50vh;
+		margin-bottom: 2em;
+	}
+}
+
+
+
+
+
+	section.content {
 	padding: 3em 0;
 	// margin-bottom: 2em;
 	// min-height: 100%;
@@ -43,10 +60,13 @@ section.content {
 			width: 40%;
 			// add back the padding
 			padding: 2em;
+			
 			svg {
 				height: 300px;
 				height: 20em;
 			}
+
+
 		}
 
 		.content-text {
@@ -63,5 +83,53 @@ section.content {
 			.content-img { float: right; }
 		}
 
+	}
+}
+
+
+
+//////////////////////////////////////////
+// Cover Letter 
+
+.sfp-cover-letter {
+	background-color: white;
+	
+	.content-img {
+		position: relative;
+		display: block;
+		width: 100%;
+		padding: 0 2em;		
+
+		svg {
+			fill: $blue1;
+			max-width: 100%;
+			height: 100%;
+		}
+	}
+
+	.content-text {
+		position: relative;
+		display: block;
+		width: 100%;
+	}
+		
+	@include bp(mama) {
+		
+		.content-img {
+			float: left;
+			width: 40%;
+			padding: 2em;
+			&.right { float: right; }
+			
+			svg {
+				height: 300px;
+				height: 20em;
+			}
+		}
+
+		.content-text {
+			width: 60%;
+			float: left;
+		}
 	}
 }
