--- a/assets/css/3-modules/_sfp-article2.scss
+++ b/assets/css/3-modules/_sfp-article2.scss
@@ -20,6 +20,14 @@ section.thanks {
 
 }
 
+
+
+// test?
+.vidyuh {
+	background-color: $blue1;
+	h1 { color: white; }
+}
+
 //////////////////////////////////////////
 // Video 
 
@@ -27,8 +35,7 @@ section.video {
 	background-color: $blue1;
 	padding: 3em;
 	@include display(flex);
-	// @include align-items(stretch);
-  @include flex-direction(column);
+	@include flex-direction(column);
   @include justify-content(center);
 }
 
@@ -45,11 +52,6 @@ section.video {
 	
 	iframe {
 		@include position(absolute, 0);
-		@include size(100%);
-		// position: absolute;
-		// top: 0;
-		// left: 0;
-		// width: 100%;
-		// height: 100%;
+		@include size(100%);		
 	}
 }
