--- a/assets/css/3-modules/_sfp-hero.scss
+++ b/assets/css/3-modules/_sfp-hero.scss
@@ -15,5 +15,13 @@
   @include justify-content(center);
 
   p { color: white; }
-	
+  h1 { color: $blue2; }
+	a.treadmill {
+		// font-weight: 300;
+		@include transform( translatey(9%) );
+		font-size: 3.5em;
+		&:hover {
+			@include transform( translatey(0%) );
+		}
+	}
 }
