Refactored SFP content and styles

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 	  {% for item in site.data.settings.nav %}
 	    <a href="{{ item.url }}">{{ item.name }}</a>
 	  {% endfor %}
-	    <a href="#" class="sfp-toggle">Storm Front</a>
+	    <!-- <a href="#" class="sfp-toggle">Storm Front</a> -->
 
 		{% include social.html %}
 	</nav>
