--- a/_includes/sfp-hero.html
+++ b/_includes/sfp-hero.html
@@ -3,5 +3,5 @@
 	<a href="#" class="logo"></a>
 	<h1>stormfront productions</h1>
 	{{ site.data.sfp.intro | markdownify }}
-	<a href="#article1" class="scroll-section big-link treadmill"><i class="fa fa-angle-down"></i></a>
+	<a href="#article1" class="scroll-section big-link"><i class="fa fa-angle-down"></i></a>
 </section>
