--- a/_includes/sfp-cover-letter.html
+++ b/_includes/sfp-cover-letter.html
@@ -1,7 +1,7 @@
-<div class="container white sfp-cover-letter">
-	
+<section class="container" id="sfp-cover-letter">
+
 	{% for item in site.data.sfp.content %}
-	<section class="content 2-column {{ item.extraClass }}" id="article{{ item.id }}">
+	<article class="content" id="article{{ item.id }}">
 		
 		<div class="content-img wow {{ item.animation }} {{item.extraClass }}" data-wow-duration="{{ site.data.sfp.wow.duration }}" data-wow-delay="{{ site.data.sfp.wow.delay }}" data-wow-offset="{{ site.data.sfp.wow.offset }}" data-wow-iteration="{{ site.data.sfp.wow.iteration }}">
 			{% include {{ item.imgPath }} %}
@@ -11,7 +11,7 @@
 			{{ item.text | markdownify }}				
 		</div>
 		
-	</section>
+	</article>
 	{% endfor %}
 
-</div>
+</section>
