--- a/_includes/sfp-faq.html
+++ b/_includes/sfp-faq.html
@@ -1,16 +1,13 @@
-<div class="container">
+<!-- FAQ SECTION -->
+<section class="content container" id="sfp-faq">
 	
-	<!-- FAQ SECTION -->
-	<section class="content more">
-		
-		{% for item in site.data.sfp.faq %}
-		<article>
-			<h1>{{ item.question }}</h1>
-			{{ item.text | markdownify }}
-		</article>
-		{% endfor %}
+	{% for item in site.data.sfp.faq %}
+	<article>
+		<h1>{{ item.question }}</h1>
+		{{ item.text | markdownify }}
+	</article>
+	{% endfor %}
 
-		{{ site.data.sfp.warning | markdownify }}
+	{{ site.data.sfp.warning | markdownify }}
 
-	</section>
-</div>
+</section>
