--- a/_includes/sfp-thank-you.html
+++ b/_includes/sfp-thank-you.html
@@ -1,27 +1,29 @@
-<section class="vidyuh content">
+<section class="" id="sfp-thanks">
 	<div class="container">
+	
+		<!-- THANKS -->
+		<article class="thanks content">
+			
+			{{ site.data.sfp.thankYou | markdownify }}
+			{{ site.data.sfp.thankYouNote | markdownify }}
+			
+			{% for item in site.data.settings.contact %}
+				<a href="{{ item.url }}" class="contact">
+					<i class="fa fa-{{ item.icon }}"></i>{{ item.data }}
+				</a>
+			{% endfor %}
+			
+		</article>
 
-	<section class="thanks">
-		
-		{{ site.data.sfp.thankYou | markdownify }}
-		{{ site.data.sfp.thankYouNote | markdownify }}
-		
-		{% for item in site.data.settings.contact %}
-			<a href="{{ item.url }}" class="contact">
-				<i class="fa fa-{{ item.icon }}"></i>{{ item.data }}
-			</a>
-		{% endfor %}
-		
-	</section>
+		<!-- VIDEO -->
+		<article class="video content">
 
-	<!-- VIDEO -->
-	<section class="content video">
-
-		<div class="videoWrapper curtains"></div>			
-		<a href="#" class="big-link thanks-play"><i class="fa fa-play"></i></a>
-		
-	</section>
+			<a href="#" class="big-link thanks-play"><i class="fa fa-play"></i></a>
+			<div class="videoWrapper curtains">
+				<!--  -->
+			</div>
+			
+		</article>
 		
 	</div>
-
 </section>
