--- a/assets/css/3-modules/_sfp-article.scss
+++ b/assets/css/3-modules/_sfp-article.scss
@@ -3,97 +3,23 @@
 
 .content {
 	padding: 3em 0;	
-	clear: both;
-	// debug
-	// &:nth-child(even) { background-color: #f9f9f9; }	
+	clear: both;	
 
+	// @768, set them to 1/2 ht and give space
 	@include bp(mama) {
 		min-height: 50%;
 		min-height: 50vh;
 		margin-bottom: 2em;
 	}
 }
-
-
-
-
-
-section.content {
-	padding: 3em 0;
-	// margin-bottom: 2em;
-	// min-height: 100%;
-	// min-height: 100vh;
-	clear: both;
-
-	// debug
-	// &:nth-child(even) { background-color: #f9f9f9; }
-
-	.content-img {
-		position: relative;
-		display: block;
-		width: 100%;
-		padding: 0 2em;
-		// @extend %size-testr;
-
-		svg {
-			fill: $blue1;
-			max-width: 100%;
-			height: 100%;
-		}
-
-	}
-
-	.content-text {
-		position: relative;
-		display: block;
-		width: 100%;
-	}
-	
-
-	@include bp(mama) {
-		min-height: 50%;
-		min-height: 50vh;
-		margin-bottom: 2em;
-
-		.content-img {
-			float: left;
-			width: 40%;
-			// add back the padding
-			padding: 2em;
-			
-			svg {
-				height: 300px;
-				height: 20em;
-			}
-
-
-		}
-
-		.content-text {
-			width: 60%;
-			float: left;
-		}
-
-		// &.2-column:nth-child(even) { 
-		// 	.content-img { float: right; }
-		// }
-			
-
-		&.right {
-			.content-img { float: right; }
-		}
-
-	}
-}
-
-
 
 //////////////////////////////////////////
 // Cover Letter 
 
-.sfp-cover-letter {
+#sfp-cover-letter {
+	// do i need this
 	background-color: white;
-	
+
 	.content-img {
 		position: relative;
 		display: block;
@@ -119,12 +45,8 @@ section.content {
 			float: left;
 			width: 40%;
 			padding: 2em;
-			&.right { float: right; }
-			
-			svg {
-				height: 300px;
-				height: 20em;
-			}
+			&.right { float: right; }			
+			svg { height: 20em; }
 		}
 
 		.content-text {
@@ -133,3 +55,94 @@ section.content {
 		}
 	}
 }
+
+//////////////////////////////////////////
+// Thank You Section
+
+#sfp-thanks {
+	background-color: $blue1;
+	// padding: 2em 0;
+	overflow: hidden;
+	
+	h1 { color: white; }
+	p { 
+		max-width: 46em; 
+		a {
+			color: white;
+			&:hover { color: $blue2; }
+		}
+	}
+
+	// Thanks
+	.thanks {	
+		
+		margin-bottom: 0;
+		min-height: 0;
+
+		a.contact {
+			display: block;
+			font-weight: 400;
+			padding-bottom: 1em;
+			@extend %levitate;		
+			
+			i { margin-right: 0.4em; }
+
+			@include bp(baby) {
+				display: inline-block;
+				padding: 1em 2em;
+			}
+		}
+	}
+	// Video 
+	.video {
+		
+		// background-color: rgba(52,114,145, 0.4);
+		// padding: 3em 0;
+		
+		@include display(flex);
+		@include flex-direction(column);
+	  @include justify-content(center);
+		
+		position: relative;
+		max-width: 50em;
+		margin: -1em auto 3em;
+		
+		@include bp(mama) {
+			// margin: -2em auto 3em;
+			// border: 6px solid $blue2;
+			padding: 0;
+			margin-top: 1em;
+			background-color: $blue2;
+
+			a.thanks-play {
+				color: $blue1;	  	
+		 	 &:hover { color: white; }
+			}
+		}
+	}
+}
+
+.videoWrapper {
+	// position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 1.6em; // change to ems
+	height: 0;
+	overflow: hidden;
+	@include transition(all .5s linear);
+	// this is how we hide it
+	&.curtains { padding: 0; }
+	
+	iframe {
+		@include position(absolute, 0);
+		@include size(100%);		
+	}
+}
+
+
+//////////////////////////////////////////
+// FAQ
+
+#sfp-faw {
+	// nothing?
+}
+
