Copy changes for SFP page

--- a/assets/css/3-modules/_sfp-base.scss
+++ b/assets/css/3-modules/_sfp-base.scss
@@ -99,6 +99,7 @@ $blue2: #347291; // dark blue
 	  text-transform: uppercase;
 	  letter-spacing: 2px;
 	  color: $blue1;
+	  padding-right: 0 1em;
 	}
 
 	h2 {
