--- a/_includes/code-sig.html
+++ b/_includes/code-sig.html
@@ -1,6 +1,8 @@
-     *88*          .~.
-    .8888.        .888.
- 888888888888    .88888.
- 888888888888   .8888888.
-     8888      .888888888.
-     8888     .88888888888.  
+<pre>
+      *88*          .~.
+     .8888.        .888.
+ 88888888888888    .88888.
+ 88888888888888   .8888888.
+      8888      .888888888.
+      8888     .88888888888.  
+</pre>
