--- a/assets/css/1-tools/_tools-index.scss
+++ b/assets/css/1-tools/_tools-index.scss
@@ -11,3 +11,8 @@
 // @import "hyde";
 
 @import "animate";
+
+// Google Fonts
+@import url(https://fonts.googleapis.com/css?family=Cutive+Mono);
+@import url(https://fonts.googleapis.com/css?family=Inconsolata:700,400);
+@import url(https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic);
