--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
+<footer>
+	<!-- SOCIAL -->
+	{% include social.html %}
+</footer>
 <!-- <script src="{{site.baseurl}}assets/js/functions.js"></script> -->
 <script>
 $(function() {
