Bring up to date. So much bloat

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,11 +21,11 @@
   </title> -->
   
   <!-- jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
   
   <!-- css -->
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/tayo.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">  
+  <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">   -->
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}apple-touch-icon-144-precomposed.png">
