--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,11 @@
 		<span>toggle</span>
 	</a>
 
-	<header>
+	<header class="navbar">
 		<a href="{{ site.baseurl }}" id="home">
 			{% include svg/avi.html %}
 		</a>
+
 	</header>
 
 	<nav class="">
