--- a/assets/css/2-base/_variables.scss
+++ b/assets/css/2-base/_variables.scss
@@ -14,6 +14,17 @@ $test2:			#16a085;
 $test3:			#2ecc71;
 $test4:			#27ae60;
 
+/* Colours for each box */
+$box1:	#1abc9c;
+$box2:	#3498db;
+$box3:	#9b59b6;
+$box4:	#34495e;
+$box5:	#f1c40f;
+$box6:	#e67e22;
+$box7:	#e74c3c;
+$box8:	#bdc3c7;
+$box9:	#2ecc71;
+$box10:	#16a085;
 
 // Typographic
 $font-stack: 'courier', monospace;
