--- a/assets/css/3-modules/_header.scss
+++ b/assets/css/3-modules/_header.scss
@@ -1,6 +1,45 @@
 ////////////////////////////////////////
 // Header & Navbar
 ////////////////////////////////////////
+header.navbar {
+	// padding: 1rem;
+	@include display(flex);
+	justify-content: space-between;
+	align-items: center;
+	background-color: $box9;
+
+	a.home__link {
+		display: inline-block;
+		margin: 0;
+		padding: 1rem;
+		line-height: 0;
+
+		svg {
+			width: 2rem;
+			height: auto;
+		}
+
+	}
+
+	nav {
+		display: flex;
+
+		a {
+			padding: 1rem 0 .1rem;
+			margin: 0 1rem 0 0;
+			line-height: 1;
+			border-bottom: 1px solid red;
+			border-color: transparent;
+			text-decoration: none;
+		}
+	}
+}
+
+
+
+
+
+
 #navbar {
 	// padding-top: 1em;
 
