--- a/_includes/job/sfp/footer.html
+++ b/_includes/job/sfp/footer.html
@@ -1,3 +1,5 @@
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="{{site.baseurl}}assets/js/wow.js"></script>
 <script src="{{site.baseurl}}assets/js/sfp.js"></script>
 
