--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,8 +29,12 @@
         {% endif %}
       {% endfor %}
 
+      {% for c in site.data.settings.channels %}
+        <a href="{{c.link}}" class="sidebar-nav-item">{{c.label}}</a>
+      {% endfor %}
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a> -->
+
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
