Style tweaks. Added a draft. Edited some posts.

--- a/assets/css/hyde.scss
+++ b/assets/css/hyde.scss
@@ -25,3 +25,13 @@ svg.avatar {
 iframe {
 	max-width: 100%;
 }
+
+// div & .cp-embed-iframe {
+// 	display: none;
+// 	@media (min-width: 48em) {
+// 		display: block;
+// 	}
+// }
+
+
+ul { padding-left: 1em; }
